widget/windows/WinUtils.h
@@ -163,12 +163,6 @@ class WinUtils
   static SetThreadDpiAwarenessContextProc sSetThreadDpiAwarenessContext;
   static EnableNonClientDpiScalingProc sEnableNonClientDpiScaling;
 
-  // Wrapper for DefWindowProc that will enable non-client dpi scaling on the
-  // window during creation.
-  static LRESULT WINAPI
-  NonClientDpiScalingDefWindowProcW(HWND hWnd, UINT msg,
-                                    WPARAM wParam, LPARAM lParam);
-
 public:
   class AutoSystemDpiAware
   {
@@ -191,11 +185,11 @@ public:
     DPI_AWARENESS_CONTEXT mPrevContext;
   };
 
-  static decltype(::DefWindowProcW)* GetDefWindowProc()
-  {
-    return sEnableNonClientDpiScaling ? NonClientDpiScalingDefWindowProcW :
-                                        ::DefWindowProcW;
-  }
+  // Wrapper for DefWindowProc that will enable non-client dpi scaling on the
+  // window during creation.
+  static LRESULT WINAPI
+  NonClientDpiScalingDefWindowProcW(HWND hWnd, UINT msg,
+                                    WPARAM wParam, LPARAM lParam);
 
   /**
    * Get the system's default logical-to-physical DPI scaling factor,
